condformat 0.4.0.9001
----------------------------------------------------------------

* Shiny support: Add condformatOutput and renderCondformat. Closes #3.
* PDF support: Fix extra NULL when printing. Closes #4.
* Demote xlsx to Suggests

condformat 0.4.0
----------------------------------------------------------------

* Excel export support with condformat2excel

condformat 0.3.0
----------------------------------------------------------------

* PDF support: Export table to LaTeX using knitr.
* Fix examples for full compatibility with dplyr 0.5.0

condformat 0.2.0
----------------------------------------------------------------

* First CRAN submission
* Add theme_htmlTable to pass custom formatting options to htmlTable.
* Improve knitr compatibility


condformat 0.1.1
----------------------------------------------------------------

* Change to a ggplot-like syntax
