@@ -1,21 +1,20 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/rule_fill_gradient2.R
-\name{rule_fill_gradient2}
-\alias{rule_fill_gradient2}
-\title{Fill column with divergent colour gradient}
+\name{rule_fill_gradient2_}
+\alias{rule_fill_gradient2_}
+\title{Fill column with divergent colour gradient (standard evaluation)}
 \usage{
-rule_fill_gradient2(..., expression, low = scales::muted("red"),
+rule_fill_gradient2_(columns, expression = ~., low = scales::muted("red"),
   mid = "white", high = scales::muted("blue"), midpoint = NA,
   space = "Lab", na.value = "#7F7F7F", limits = NA, lockcells = FALSE)
 }
 \arguments{
-\item{...}{Comma separated list of unquoted column names.
-If \code{expression} is also given, then this list can use any of the
-\code{\link[dplyr]{select}} syntax possibilities.}
+\item{columns}{a character vector with the column names or a list with
+dplyr select helpers given as formulas or a combination of both}
 
-\item{expression}{an expression to be evaluated with the data.
-It should evaluate to a numeric vector,
-that will be used to determine the colour gradient level.}
+\item{expression}{a formula to be evaluated with the data that will be used
+to determine which cells are to be coloured. See the examples
+to use it programmatically}
 
 \item{low}{colour for low end of gradient.}
 
@@ -34,23 +33,19 @@ other values are deprecated.}
 
 \item{lockcells}{logical value determining if no further rules should be applied to the affected cells.}
 }
-\value{
-The condformat_tbl object, with the added formatting information
-}
 \description{
 Fills the background color of a column using a three colors gradient based on
 the values of an expression
 }
 \examples{
 data(iris)
-condformat(iris[c(1:5, 70:75, 120:125), ]) +
- rule_fill_gradient2(Sepal.Length) +
- rule_fill_gradient2(Species, expression=Sepal.Length - Sepal.Width)
+condformat(iris[1:10,]) + rule_fill_gradient2_(columns=c("Sepal.Length"))
+condformat(iris[1:10,]) + rule_fill_gradient2_("Species", expression= ~Sepal.Length-Sepal.Width)
 }
 \seealso{
 Other rule: \code{\link{rule_fill_discrete_}},
   \code{\link{rule_fill_discrete}},
-  \code{\link{rule_fill_gradient2_}},
+  \code{\link{rule_fill_gradient2}},
   \code{\link{rule_fill_gradient_}},
   \code{\link{rule_fill_gradient}}
 }
