@@ -1,10 +1,9 @@
 # Tests:
-library(testthat)
 context("rule_fill_discrete")
 
 test_that("rule_fill_discrete works", {
   data(iris)
-  x <- condformat::condformat(iris[c(1:10, 51:60, 101:110),])
+  x <- condformat(iris[c(1:10, 51:60, 101:110),])
   y <- x + rule_fill_discrete(Species,
                               expression  = Sepal.Length > max(Sepal.Length),
                               colours = c("TRUE" = "red", "FALSE" = "blue"))
@@ -58,28 +57,38 @@ test_that("rule_fill_discrete(_) syntax with multiple variables and no expressio
 
 test_that("rule_fill_discrete_ works", {
   data(iris)
-  x <- condformat(iris[c(1,51,101), ])
+  x <- condformat(iris[c(1, 2, 51, 101, 102), ])
   y <- x + rule_fill_discrete_("Species", colours = c("virginica" = "#FF0000",
                                                       "versicolor" = "#00FF00",
                                                       "setosa" = "#0000FF"))
   out <- condformat2html(y)
   expect_equal(
-    sapply(strsplit(as.character(out), "\n", fixed = TRUE),
-         function(line) grep("(#0000FF.*setosa)", line)),
-    19)
+    length(sapply(strsplit(as.character(out), "\n", fixed = TRUE),
+                  function(line) grep("(#0000FF.*setosa)", line))),
+    2)
   expect_equal(
-    sapply(strsplit(as.character(out), "\n", fixed = TRUE),
-         function(line) grep("(#00FF00.*versicolor)", line)),
-    27)
+    length(sapply(strsplit(as.character(out), "\n", fixed = TRUE),
+                  function(line) grep("(#00FF00.*versicolor)", line))),
+    1)
   expect_equal(
-    sapply(strsplit(as.character(out), "\n", fixed = TRUE),
-         function(line) grep("(#FF0000.*virginica)", line)),
-    35)
+    length(sapply(strsplit(as.character(out), "\n", fixed = TRUE),
+         function(line) grep("(#FF0000.*virginica)", line))),
+    2)
 
-  y <- x + rule_fill_discrete_("Species", expression = ~Sepal.Length > 4.6,
-                               colours = c("TRUE" = "#FF0000"))
+})
+
+test_that("rule_fill_discrete_ works with formula", {
+  data(iris)
+  x <- condformat(iris[c(1, 2, 51, 101, 102), ])
+  y <- x + rule_fill_discrete_("Species", expression = ~Sepal.Length > 5.5,
+                               colours = c("TRUE" = "#FF0000",
+                                           "FALSE" = "#00FF00"))
   out <- condformat2html(y)
   expect_match(out, "^<table.*</table>$")
+  expect_equal(length(gregexpr("#FF0000", out, fixed = TRUE)[[1]]),
+               3)
+  expect_equal(length(gregexpr("#00FF00", out, fixed = TRUE)[[1]]),
+               2)
 })
 
 test_that("custom rule_ passes doing nothing", {
