@@ -1,27 +1,45 @@
 # Tests:
 context("rule_fill_gradient")
 
-test_that("rule_fill_gradient works", {
+test_that("rule_fill_gradient works in the limits", {
   data(iris)
-  x <- condformat(iris[c(1:10, 51:60, 101:110),])
-  y <- x + rule_fill_gradient(Sepal.Length)
+  x <- condformat(iris[c(1,51,101),])
+  y <- x + rule_fill_gradient(Sepal.Length, low = "#FF0000", high = "#00FF00")
   out <- condformat2html(y)
   expect_match(out, "^<table.*</table>$")
+  expect_equal(
+    length(sapply(strsplit(as.character(out), "\n", fixed = TRUE),
+                  function(line) grep("(#FF0000.*5.1)", line))),
+    1)
+  expect_equal(
+    length(sapply(strsplit(as.character(out), "\n", fixed = TRUE),
+                  function(line) grep("(#00FF00.*7.0)", line))),
+    1)
+})
 
-  y <- x + rule_fill_gradient_("Sepal.Length")
+test_that("rule_fill_gradient_ works in the limits", {
+  data(iris)
+  x <- condformat(iris[c(1,51,101),])
+  y <- x + rule_fill_gradient_("Sepal.Length", low = "#FF0000", high = "#00FF00")
   out <- condformat2html(y)
-  expect_match(out, "^<table.*</table>$")
+  expect_equal(
+    length(sapply(strsplit(as.character(out), "\n", fixed = TRUE),
+                  function(line) grep("(#FF0000.*5.1)", line))),
+    1)
+  expect_equal(
+    length(sapply(strsplit(as.character(out), "\n", fixed = TRUE),
+                  function(line) grep("(#00FF00.*7.0)", line))),
+    1)
 })
 
 test_that("rule_fill_gradient2 works", {
   data(iris)
-  x <- condformat(iris[c(1:10, 51:60, 101:110),])
+  x <- condformat(iris[c(1, 51, 101),])
   y <- x + rule_fill_gradient2(Sepal.Length)
   out <- condformat2html(y)
+  y2 <- x + rule_fill_gradient2_("Sepal.Length")
+  out2 <- condformat2html(y2)
   expect_match(out, "^<table.*</table>$")
-
-  y <- x + rule_fill_gradient2_("Sepal.Length")
-  out <- condformat2html(y)
-  expect_match(out, "^<table.*</table>$")
+  expect_equal(out, out2)
 })
 
