@@ -4,6 +4,7 @@ condformat 0.4.0.9001
 * Shiny support: Add condformatOutput and renderCondformat. Closes #3.
 * PDF support: Fix extra NULL when printing. Closes #4.
 * Demote xlsx to Suggests
+* Fix standard evaluation functions, use formulas.
 
 condformat 0.4.0
 ----------------------------------------------------------------
